--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>This is a website</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+	<script src="JavaScript.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
@@ -14,24 +15,30 @@
 <div class="container-fluid p-5 bg-primary text-white text-center">
   <h1>Noahs Website</h1>
   <p>By Noah!</p> 
+  <p id="demo"></p>
 </div>
 
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Column 1</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <h3>Website Dev Log</h3>
+      <p>Currently I am working on creating this webpage.</p>
+      <p>Next steps will be separating these colounms into seprate pages.</p>
+      <p>Adding Content on my current and planned projects as well as progress updates.</p>
+      <p>And also making the website look better. Be sure to check in weekly to see the improvents!</p>
     </div>
     <div class="col-sm-4">
-      <h3>Column 2</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <h3>Active Projects</h3>
+      <p>Hai! I've got a few projects currently in the works.</p>
+      <p>Firstly I'm creating a arduino based robot with plans to make it both autonomous and remote controlled. currently I am waiting on electronics to arrive, but should have a physical build for showcase soon enough!</p>
+      <p>My other project is a small 300Gb network drive. Idk what Im doing but the goal is to have the network drive work with all wifi devices within my household. ~almost done... maybe. (._.`)</p>
     </div>
     <div class="col-sm-4">
-      <h3>Column 3</h3>        
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <h3>Planned Projects</h3>        
+      <p>This is where I'll be listing projects on my mind, but not actively in the works.</p>
+      <p>Rage Sheild : Yes, the crazy edgy amazing sheild from the hit anime "rising of the sheild hero" is something that I will be making... eventually, I hope.</p>
+      <p>Battle Bots : Im looking to make a small battle bot (or several) worthy of fighting in a ring against the fiercest rivals, or atleast making something to pit against friend's creations. We'll see :)  </p>
+      <p>Rapid fire now, heres the rest; <br> Majora's Mask : October 2023 <br> Ski-Stroller : Winter 2022 <br> RC lawnmower : Spring 2023 <br> Youtube Gaming Channel : Winter 2022</p>
     </div>
   </div>
 </div>
