--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
       <p>Currently I am working on creating this webpage.</p>
       <p>Next steps will be separating these colounms into seprate pages.</p>
       <p>Adding Content on my current and planned projects as well as progress updates.</p>
-      <p>And also making the website look better. Be sure to check in weekly to see the improvents!</p>
+      <p>And also making the website look better, As this is just a W3 Bootstrap template.</p>
     </div>
     <div class="col-sm-4">
       <h3>Active Projects</h3>
-      <p>Hai! I've got a few projects currently in the works.</p>
-      <p>Firstly I'm creating a arduino based robot with plans to make it both autonomous and remote controlled. currently I am waiting on electronics to arrive, but should have a physical build for showcase soon enough!</p>
-      <p>My other project is a small 300Gb network drive. Idk what Im doing but the goal is to have the network drive work with all wifi devices within my household. ~almost done... maybe. (._.`)</p>
+      <p>This Website.</p>
+
     </div>
     <div class="col-sm-4">
-      <h3>Planned Projects</h3>        
+      <h3>Planned Projects</h3>    
+      <p>3D printer Trying to make it work with ABS plastic, this is hell. Almost done though.</p>
+      <p>Ardunio Based Drive train. WIP need new aurdino board. Would like to 3d print chasis</p>
+      <p>My other project is a small 300Gb network drive. - May need to get a new router, if this is the case project cancelled.</p>    
       <p>This is where I'll be listing projects on my mind, but not actively in the works.</p>
       <p>Rage Sheild : Yes, the crazy edgy amazing sheild from the hit anime "rising of the sheild hero" is something that I will be making... eventually, I hope.</p>
       <p>Battle Bots : Im looking to make a small battle bot (or several) worthy of fighting in a ring against the fiercest rivals, or atleast making something to pit against friend's creations. We'll see :)  </p>
