--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>This is a website</title>	
+	<title>Noah's Task Summary</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"> <!--Bootstrap Link-->
@@ -9,11 +9,39 @@
 	
 	<script src="JavaScript.js"></script><!--Local Link-->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script><!--Bootstrap Link-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script><!--Bootstrap Link-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script><!--Bootstrap Link-->
+	<script src="https://code.jquery.com/jquery-1.12.4.js">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script><!--Bootstrap Link-->
+
+  
 </head>
 
 <body>
+<!--Cannot solve
+<script>
+$.get("navigationBar.html", function(data){
+    $("#nav").replaceWith(data);
+});
+</script>
+<div id="#nav"></div>
+-->
+<nav class="navbar navbar-expand-sm bg-info navbar-light">
+  <div class="container-fluid">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link active" href="index.html">Main</a>
+      </li>
+     <li class="nav-item">
+        <a class="nav-link disabled" href="portfolio.html">Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="journalEntries/00.00.00.html">Journal</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 <div class="container-fluid p-5 bg-primary text-white text-center">
   <h1>Noahs Website</h1>
