--- a/journalEntries/23.02.13.html
+++ b/journalEntries/23.02.13.html
@@ -18,13 +18,13 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="../index.html">Main</a>
+        <a class="nav-link active" href="index.html">Main</a>
       </li>
      <li class="nav-item">
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-link disabled" href="portfolio.html">Portfolio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Link</a>
+        <a class="nav-link" href="journalEntries/00.00.00.html">Journal</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
@@ -32,6 +32,7 @@
     </ul>
   </div>
 </nav>
+
 
 <div class="dropdown">
     <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
