--- a/navigationBar.html
+++ b/navigationBar.html
@@ -5,10 +5,10 @@
         <a class="nav-link active" href="index.html">Main</a>
       </li>
      <li class="nav-item">
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-link disabled" href="portfolio.html">Portfolio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Link</a>
+        <a class="nav-link" href="journalEntries/00.00.00.html">Journal</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
