--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,10 @@
         <a class="nav-link active" href="index.html">Main</a>
       </li>
      <li class="nav-item">
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
+        <a class="nav-link disabled" href="portfolio.html">Portfolio</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#">Link</a>
+        <a class="nav-link" href="journalEntries/00.00.00.html">Journal</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
@@ -32,6 +32,7 @@
     </ul>
   </div>
 </nav>
+
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
