--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ $.get("navigationBar.html", function(data){
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-4">
-      <h3>Website Dev Log</h3>
+      <h3>Website TODO|Wishlist</h3>
       <p>Currently I am working on creating this webpage.</p>
       <p>Next steps will be separating these colounms into seprate pages.</p>
       <p>Adding Content on my current and planned projects as well as progress updates.</p>
@@ -65,13 +65,9 @@ $.get("navigationBar.html", function(data){
     </div>
     <div class="col-sm-4">
       <h3>Planned Projects</h3>    
-      <p>3D printer Trying to make it work with ABS plastic, this is hell. Almost done though.</p>
-      <p>Ardunio Based Drive train. WIP need new aurdino board. Would like to 3d print chasis</p>
-      <p>My other project is a small 300Gb network drive. - May need to get a new router, if this is the case project cancelled.</p>    
-      <p>This is where I'll be listing projects on my mind, but not actively in the works.</p>
-      <p>Rage Sheild : Yes, the crazy edgy amazing sheild from the hit anime "rising of the sheild hero" is something that I will be making... eventually, I hope.</p>
-      <p>Battle Bots : Im looking to make a small battle bot (or several) worthy of fighting in a ring against the fiercest rivals, or atleast making something to pit against friend's creations. We'll see :)  </p>
-      <p>Rapid fire now, heres the rest; <br> Majora's Mask : October 2023 <br> Ski-Stroller : Winter 2022 <br> RC lawnmower : Spring 2023 <br> Youtube Gaming Channel : Winter 2022</p>
+      <p>Rust, not really a project, I just want to learn rust. If i have a good idea that can use it, maybe a project will come from it?</p>
+      <p>Vision Tracking, fuck it im finally doing a vision tracking project. starting this as soon as semester ends, and THIS WILL BE DONE by the end of august.</p>
+      <p>Install NixOS, not really a project per-se but i want to play with linux and nix seems cool.</p>
     </div>
   </div>
 </div>
