--- a/index.html
+++ b/index.html
@@ -1,81 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Noah's Task Summary</title>	
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"> <!--Bootstrap Link-->
-	<link rel="stylesheet" type="text/css" href="style.css"><!--Local Link-->
-	
-	<script src="JavaScript.js"></script><!--Local Link-->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script><!--Bootstrap Link-->
-	<script src="https://code.jquery.com/jquery-1.12.4.js">
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script><!--Bootstrap Link-->
+  <meta charset="UTF-8">
+  <title>Reliability & Howe Inc.</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  
+  <!-- Bootstrap 5 CDN -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  >
+
+  <style>
+    body {
+      background-color: #f4f4f4;
+      font-family: Georgia, "Times New Roman", serif;
+    }
+
+    .panel {
+      background: #f7f7f7;
+      border-radius: 12px;
+      padding: 1.5rem;
+      height: 100%;
+    }
+
+    .panel.alt {
+      background: #e9e9e9;
+    }
+
+    .placeholder-box {
+      width: 100%;
+      height: 2rem;
+      background: #ccc;
+      border-radius: 4px;
+      margin: 1.5rem 0;
+    }
+
+    h1 {
+      font-size: 1.6rem;
+    }
+
+    h2 {
+      font-size: 1.4rem;
+    }
+  </style>
 </head>
 
 <body>
-<!--Cannot solve
-<script>
-$.get("navigationBar.html", function(data){
-    $("#nav").replaceWith(data);
-});
-</script>
-<div id="#nav"></div>
--->
-<nav class="navbar navbar-expand-sm bg-info navbar-light">
-  <div class="container-fluid">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link active" href="index.html">Main</a>
-      </li>
-     <li class="nav-item">
-        <a class="nav-link disabled" href="portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="journalEntries/00.00.00.html">Journal</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
+
+<div class="container my-5">
+
+  <!-- Row 1 -->
+  <div class="row g-4 mb-4">
+
+    <div class="col-md-4">
+      <div class="panel">
+        <h1 class="text-center text-decoration-underline">
+          Reliability<br>&<br>Howe Inc.
+        </h1>
+
+        <p class="fw-bold text-center mt-4">
+          Creating High Quality and Reliable Industrial Equipment Since 2026.
+        </p>
+
+        <div class="placeholder-box"></div>
+
+        <p>
+          Contact us for all your custom industrial automation needs, such as
+          PLC, Conveyance, and Logistics.
+        </p>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="panel">
+        <h2>Why Choose Us?</h2>
+
+        <p>
+          Our company has been established for many days, and in this time has
+          achieved a 100% approval rating from our customers.
+        </p>
+
+        <p>
+          Our commitment to reliability means that you can rest assured your
+          line will maintain maximum uptime.
+        </p>
+
+        <p>
+          Our patent-pending manifold design allows for up to four unique tanks
+          to be plumbed into our filling station simultaneously, enabling fast
+          cycling between multiple colors.
+        </p>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="panel">
+        <h2>Timing and Flow</h2>
+
+        <p>
+          All materials are meticulously timed using high-quality Rockwell
+          Automation PLC components.
+        </p>
+
+        <p>
+          Indexed conveyors allow for concurrent operation without risk of
+          backing up or damaging fragile materials.
+        </p>
+      </div>
+    </div>
+
   </div>
-</nav>
 
-<div class="container-fluid p-5 bg-primary text-white text-center">
-  <h1>Noahs Website</h1>
-  <p>By Noah!</p> 
-  <p id="demo"></p>
-</div>
+  <!-- Row 2 -->
+  <div class="row g-4">
 
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-sm-4">
-      <h3>Website TODO|Wishlist</h3>
-      <p>Currently I am working on creating this webpage.</p>
-      <p>Next steps will be separating these colounms into seprate pages.</p>
-      <p>Adding Content on my current and planned projects as well as progress updates.</p>
-      <p>And also making the website look better, As this is just a W3 Bootstrap template.</p>
-    </div>
-    <div class="col-sm-4">
-      <h3>Active Projects</h3>
-      <p>This Website.</p>
+    <div class="col-md-4">
+      <div class="panel alt">
+        <h2>Inventory Counted</h2>
 
+        <p>
+          No surprises during operation. All materials are automatically
+          counted and placed into 36-unit pallets before filling.
+        </p>
+
+        <p>
+          Automatic tank failover ensures zero downtime by switching tanks the
+          moment fluid runs low and alerting an operator to restock.
+        </p>
+
+        <p>
+          If materials run out, the line automatically shuts down. No half-filled
+          or incomplete lava lamps.
+        </p>
+      </div>
     </div>
-    <div class="col-sm-4">
-      <h3>Planned Projects</h3>    
-      <p>Rust, not really a project, I just want to learn rust. If i have a good idea that can use it, maybe a project will come from it?</p>
-      <p>Vision Tracking, fuck it im finally doing a vision tracking project. starting this as soon as semester ends, and THIS WILL BE DONE by the end of august.</p>
-      <p>Install NixOS, not really a project per-se but i want to play with linux and nix seems cool.</p>
+
+    <div class="col-md-4">
+      <div class="panel alt">
+        <h2>Customize Your Pallets</h2>
+
+        <p>
+          Individually choose which colors each lava lamp has, without increased
+          cycle time.
+        </p>
+
+        <p>
+          Up to four unique colors per pallet.
+        </p>
+
+        <p>
+          Automatic purging between color changes provides consistent,
+          repeatable colors.
+        </p>
+      </div>
     </div>
+
+    <div class="col-md-4">
+      <div class="panel alt">
+        <h2>Contact Us</h2>
+
+        <p class="fw-bold">
+          Reliability & Howe Inc.<br>
+          <span class="text-decoration-underline">Project Group 29</span>
+        </p>
+
+        <p>
+          Nia Condotta<br>
+          LJ Gemmell-Brown<br>
+          Chiamaka Atalor<br>
+          Komal Gill
+        </p>
+
+        <div class="placeholder-box"></div>
+        <small class="text-muted">Placeholder image / QR code</small>
+      </div>
+    </div>
+
   </div>
+
 </div>
 
 </body>
-
-
-
-
-
 </html>
