--- a/index.html
+++ b/index.html
@@ -1,184 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Reliability & Howe Inc.</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Reliability & Howe Inc.</title>
+<style>
+  body {
+    font-family: 'Libertinus Serif', serif;
+    font-size: 16pt;
+    line-height: 1.5em;
+    margin: 0;
+    padding: 0.2in;
+    background: url('AI-green2.jpg') no-repeat center center fixed;
+    background-size: cover;
+    color: #000;
+  }
 
-  <!-- Bootstrap 5 CDN -->
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-  >
+  .container {
+    display: flex;
+    gap: 0.25in;
+    width: 100%;
+    flex-wrap: wrap;
+  }
 
-  <style>
-    body {
-      background-color: #f4f4f4;
-      font-family: Georgia, "Times New Roman", serif;
-    }
+  .column {
+    flex: 1;
+    min-width: 30%;
+    background: rgba(225, 225, 225, 0.9);
+    border-radius: 8px;
+    padding: 8pt;
+    box-sizing: border-box;
+    margin-bottom: 1in;
+  }
 
-    .panel {
-      background: #f7f7f7;
-      border-radius: 12px;
-      padding: 1.5rem;
-      height: 100%;
-    }
+  h1 {
+    text-align: center;
+    text-decoration: underline;
+    margin-top: 1cm;
+    margin-bottom: 1.5cm;
+  }
 
-    .panel.alt {
-      background: #e9e9e9;
-    }
+  h2 {
+    text-align: center;
+    margin-bottom: 0.2cm;
+  }
 
-    .placeholder-box {
-      width: 100%;
-      height: 2rem;
-      background: #ccc;
-      border-radius: 4px;
-      margin: 1.5rem 0;
-    }
+  strong {
+    display: block;
+    margin-bottom: 1cm;
+  }
 
-    h1 {
-      font-size: 1.6rem;
-    }
+  img {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+  }
 
-    h2 {
-      font-size: 1.4rem;
-    }
-  </style>
+  .contact {
+    text-align: center;
+  }
+
+  .colbreak {
+    flex-basis: 100%;
+    height: 0;
+  }
+
+  .spacer {
+    height: 1cm;
+  }
+</style>
 </head>
-
 <body>
 
-<div class="container my-5">
-
-  <!-- Row 1 -->
-  <div class="row g-4 mb-4">
-
-    <div class="col-md-4">
-      <div class="panel">
-        <h1 class="text-center text-decoration-underline">
-          Reliability<br>&<br>Howe Inc.
-        </h1>
-
-        <p class="fw-bold text-center mt-4">
-          Creating High Quality and Reliable Industrial Equipment Since 2026.
-        </p>
-
-        <div class="placeholder-box"></div>
-
-        <p>
-          Contact us for all your custom industrial automation needs, such as
-          PLC, Conveyance, and Logistics.
-        </p>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="panel">
-        <h2>Why Choose Us?</h2>
-
-        <p>
-          Our company has been established for many days, and in this time has
-          achieved a 100% approval rating from our customers.
-        </p>
-
-        <p>
-          Our commitment to reliability means that you can rest assured your
-          line will maintain maximum uptime.
-        </p>
-
-        <p>
-          Our patent-pending manifold design allows for up to four unique tanks
-          to be plumbed into our filling station simultaneously, enabling fast
-          cycling between multiple colors.
-        </p>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="panel">
-        <h2>Timing and Flow</h2>
-
-        <p>
-          All materials are meticulously timed using high-quality Rockwell
-          Automation PLC components.
-        </p>
-
-        <p>
-          Indexed conveyors allow for concurrent operation without risk of
-          backing up or damaging fragile materials.
-        </p>
-      </div>
-    </div>
-
+<div class="container">
+  <div class="column">
+    <h1>Reliability & Howe Inc.</h1>
+    <strong>Creating High Quality and Reliable Industrial Equipement Since 2026.</strong>
+    <img src="Logo.png" alt="Company Logo" style="height: 8cm;">
+    <p>Contact us for all your custom industrial automation needs, such as PLC, Conveyance, and Logistics.</p>
   </div>
 
-  <!-- Row 2 -->
-  <div class="row g-4">
-
-    <div class="col-md-4">
-      <div class="panel alt">
-        <h2>Inventory Counted</h2>
-
-        <p>
-          No surprises during operation. All materials are automatically
-          counted and placed into 36-unit pallets before filling.
-        </p>
-
-        <p>
-          Automatic tank failover ensures zero downtime by switching tanks the
-          moment fluid runs low and alerting an operator to restock.
-        </p>
-
-        <p>
-          If materials run out, the line automatically shuts down. No half-filled
-          or incomplete lava lamps.
-        </p>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="panel alt">
-        <h2>Customize Your Pallets</h2>
-
-        <p>
-          Individually choose which colors each lava lamp has, without increased
-          cycle time.
-        </p>
-
-        <p>
-          Up to four unique colors per pallet.
-        </p>
-
-        <p>
-          Automatic purging between color changes provides consistent,
-          repeatable colors.
-        </p>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="panel alt">
-        <h2>Contact Us</h2>
-
-        <p class="fw-bold">
-          Reliability & Howe Inc.<br>
-          <span class="text-decoration-underline">Project Group 29</span>
-        </p>
-
-        <p>
-          Nia Condotta<br>
-          LJ Gemmell-Brown<br>
-          Chiamaka Atalor<br>
-          Komal Gill
-        </p>
-
-        <div class="placeholder-box"></div>
-        <small class="text-muted">Placeholder image / QR code</small>
-      </div>
-    </div>
-
+  <div class="column">
+    <h1>Why Choose Us?</h1>
+    <p>Our company has been established for many days, and in this time has achieved a 100% approval rating from our customers.</p>
+    <p>Our commitment to Reliability means that you can rest assured your line will maintain maximum uptime.</p>
+    <p>Our patent pending manifold design allows for up to 4 unique tanks to be plumbed into our filling station simultaneously, allowing for fast cycling between several colors.</p>
   </div>
 
+  <div class="column">
+    <h1>Timing and Flow</h1>
+    <p>All materials are meticulously timed using high quality Rockwell Automation PLC components.</p>
+    <p>Indexed Conveyors allow for concurrent operation without risk of backing up, or damaging fragile materials.</p>
+  </div>
+</div>
+
+<div class="container">
+  <div class="column">
+    <h1>Inventory Counted</h1>
+    <p>No surprises during operation. All materials are automatically counted and placed into 36 unit pallets before filling.</p>
+    <p>With automatic tank failover, the moment any fluid runs low, our systems will automatically switch to the next tank, and alert an operator to restock with zero downtime.</p>
+    <p>If at any time materials run out, the line will automatically shut down. No half-filled or incomplete lava lamps.</p>
+  </div>
+
+  <div class="column">
+    <h1>Customize your pallets</h1>
+    <p>Individually choose which colors each lava lamp has, without increased cycle time.</p>
+    <p>Up to 4 unique colors of lava lamps per pallet.</p>
+    <p>Automatically purges between color changes to provide consistent repeatable colors.</p>
+  </div>
+
+  <div class="column">
+    <h1>Contact Us</h1>
+    <div class="contact">
+      <h2>Project Group 29</h2>
+      <p>Nia Condotta<br>nia.condotta@ontariotechu.net</p>
+      <p>LJ Gemmell-Brown<br>laurence.gemmellbrown@uoit.net</p>
+      <p>Chiamaka Atalor<br>chiamaka.atalor@ontariotechu.net</p>
+      <p>Komal Gill<br>Komaljit.gill@ontariotechu.net</p>
+      <p>Visit Our Website!</p>
+      <img src="qr-code.png" alt="QR Code" style="width: 75%;">
+    </div>
+  </div>
 </div>
 
 </body>
